# internal/order/delivery/http/routes.go
@@ -2,15 +2,13 @@ package http
 
 import (
 	"github.com/engineerXIII/maiSystemBackend/internal/middleware"
-	"github.com/engineerXIII/maiSystemBackend/internal/product"
+	"github.com/engineerXIII/maiSystemBackend/internal/order"
 	"github.com/labstack/echo/v4"
 )
 
-func MapProductRoutes(productGroup *echo.Group, p product.Handlers, mw *middleware.MiddlewareManager) {
-	productGroup.POST("/create", p.Create()) //, mw.AuthSessionMiddleware, mw.CSRF)
-	productGroup.PUT("/:product_id", p.Update(), mw.AuthSessionMiddleware, mw.CSRF)
-	productGroup.DELETE("/:product_id", p.Delete(), mw.AuthSessionMiddleware, mw.CSRF)
-	productGroup.GET("/:product_id", p.GetByID())
-	productGroup.GET("/search", p.SearchByName())
-	productGroup.GET("", p.GetProducts())
+func MapOrderRoutes(orderGroup *echo.Group, p order.Handlers, mw *middleware.MiddlewareManager) {
+	orderGroup.POST("/create", p.Create()) //, mw.AuthSessionMiddleware, mw.CSRF)
+	orderGroup.PUT("/:order_id", p.Update())
+	orderGroup.DELETE("/:order_id", p.Delete())
+	orderGroup.GET("/:order_id", p.GetByID())
 }
